@@ -16803,6 +16803,10 @@ finish_function (bool inline_p)
 	}
     }
 
+  /* Remember that we were in class scope.  */
+  if (current_class_name)
+    ctype = current_class_type;
+
   if (DECL_DELETED_FN (fndecl))
     {
       DECL_INITIAL (fndecl) = error_mark_node;
@@ -16860,10 +16864,6 @@ finish_function (bool inline_p)
 
       current_function_return_value = NULL_TREE;
     }
-
-  /* Remember that we were in class scope.  */
-  if (current_class_name)
-    ctype = current_class_type;
 
   /* Must mark the RESULT_DECL as being in this function.  */
   DECL_CONTEXT (DECL_RESULT (fndecl)) = fndecl;
